--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -34,3 +34,17 @@
             p-3
     }
 } */
+
+@layer utilities {
+    @variants responsive {
+      /* Chrome, Safari and Opera */
+      .no-scrollbar::-webkit-scrollbar {
+          display: none;
+      }
+  
+      .no-scrollbar {
+          -ms-overflow-style: none; /* IE and Edge */
+          scrollbar-width: none; /* Firefox */
+      }
+    }
+}
